@@ -20,11 +20,13 @@ data:extend({
     subgroup = "pm-cadnium-tm",
     order = "a",
     enabled = false,
-    energy_required = 2,
+    energy_required = 4,
+    allow_productivity = true,
     ingredients =
     {
       PM.ingredient("pm-zinc-chunk", 6),
-      PM.ingredient("steam", 25, "fluid")
+      PM.ingredient("steam", 25, "fluid"),
+      PM.ingredient("sulfur", 3)
     },
     results =
     {
@@ -37,22 +39,42 @@ data:extend({
     icon_size = 64,
     icon = "__periodic-madness__/graphics/icons/recipes/zinc-tailings-seperation.png",
     category = "pm-coldening",
-    main_product = "pm-cadnium-ore",
     subgroup = "pm-cadnium-tm",
     order = "b",
     enabled = false,
     energy_required = 2,
+    allow_productivty = true,
     ingredients =
     {
       PM.ingredient("pm-zinc-tailings", 10, "fluid"),
     },
     results =
     {
-      PM.product("pm-cadnium-ore", 2),
-      PM.product("pm-zinc-ore", 2),
+      PM.product("pm-cadnium-sulfate", 2),
+      PM.product("pm-zinc-chunks", 2),
       PM.product_range_chance("pm-ferrum", 1, 3, 0.5),
     }
   } --[[@as data.RecipePrototype]],
+  {
+    type = "recipe",
+    name = "pm-cadnium-ore",
+    enabled = false,
+    energy_required = 2,
+    category = "pm-electrolysis",
+    subgroup = "pm-cadnium-tm",
+    order = "c",
+    ingredients = 
+    {
+      PM.ingredient("pm-cadnium-sulfate", 4),
+      PM.ingredient("pm-zinc-plate", 4),
+      PM.ingredient("pm-carbon", 4)
+    },
+    results = 
+    {
+      PM.product_range("pm-cadnium-ore", 3, 4),
+      PM.product_range("sulfur", 1, 4)
+    }
+  },
   {
     type = "recipe",
     name = "pm-cadnium-red",
